--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,13 @@
     <div class="showoff">
 
     </div>  
-    
+ 
     <div class="bcontainer">
         <button class="learnmore">COMING SOON</button>
     </div>  
+    <div class="bcontainer overlay">
+        <div class="animatedcircle"></div>
+    </div> 
+     
+    
 </div>
