--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,12 +8,15 @@
 
     </div>  
  
-    <div class="bcontainer">
-        <button class="learnmore">COMING SOON</button>
-    </div>  
-    <div class="bcontainer overlay">
-        <div class="animatedcircle"></div>
-    </div> 
+    <div class="zoomies">
+        <div class="bcontainer">
+            <button class="learnmore">COMING SOON</button>
+        </div>  
+        <div class="bcontainer overlay">
+            <div class="animatedcircle"></div>
+        </div> 
+    </div>
+    
      
     
 </div>
