added color scheme and more ANIMATIONS

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="homepage">
     
     <div class="titlebox">
-        <div class="title">hummelweb.net</div>
+        <div class="title">hummelweb</div>
     </div>
 
     <div class="showoff">
