--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,7 +10,7 @@
     position: relative;
     float: left;
     .title {
-      font-size: 3rem;
+      font-size: 5rem;
       top: 50%;
       bottom: 50%;
       height: auto;
@@ -18,13 +18,13 @@
       margin: auto;
       position: relative;
       font-family: "Pathway Extreme", sans-serif;
-      font-weight: bold;
+      font-weight: 1000;
       color: #121212;
     }
   }
 
   .showoff {
-    background-color: slategrey;
+    background-color: #ffde7d;
     width: 40%;
     height: 100%;
     right: 0%;
@@ -53,17 +53,21 @@
       margin: -0.5px -0.5px;
       border-radius: 50%;
       border-style: dashed;
-      animation-name: spin;
-      animation-duration: 10000ms;
+      animation: spin;
+      animation-duration: 5000ms;
       animation-iteration-count: infinite;
       animation-timing-function: linear;
     }
     .learnmore {
-      background-color: black;
+      background: linear-gradient(
+        0deg,
+        rgba(99, 0, 143, 1) 0%,
+        rgba(201, 120, 237, 1) 100%
+      );
       color: white;
       border: none;
       border-radius: 50%;
-      margin: 11px 11px;
+      margin: 11.5px 11.5px;
       width: 200px;
       height: 200px;
       font-size: 2.3em;
@@ -74,14 +78,17 @@
 }
 
 @keyframes spin {
-  from {
-    transform: rotate(0deg);
+  0% {
+    transform: scale(1) rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: scale(1.1) rotate(90deg);
+  }
+  100% {
+    transform: scale(1) rotate(180deg);
   }
 }
 
 .zoomies:hover {
-  transform: scale(1.3);
+  transform: scale(1.8);
 }
