--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,7 +24,7 @@
   }
 
   .showoff {
-    background-color: #ffde7d;
+    background-color: #2c3e50;
     width: 40%;
     height: 100%;
     right: 0%;
@@ -61,8 +61,8 @@
     .learnmore {
       background: linear-gradient(
         0deg,
-        rgba(99, 0, 143, 1) 0%,
-        rgba(201, 120, 237, 1) 100%
+        rgba(116, 146, 168, 1) 0%,
+        rgba(184, 92, 231, 1) 100%
       );
       color: white;
       border: none;
