--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,9 +1,23 @@
-<div class="container">
-    <div class="box">
-        <div>hi
-        </div>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<div class="homepage">
+    
+    <div class="titlebox">
+        <div class="title">hummelweb</div>
     </div>
-    <div class="box overlay">
-        <div>hey</div>
-    </div>
-  </div>
+
+    <div class="showoff">
+
+    </div>  
+
+    <div class="zoomies">
+        <div class="bcontainer">
+            <button class="learnmore">COMING SOON</button>
+        </div>  
+        <div class="bcontainer overlay">
+            <div class="animatedcircle"></div>
+        </div> 
+    </div> 
+    
+     
+    
+</div>
