--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,21 +1,95 @@
-.container {
-  width: 150px;
-  height: 150px;
-  position: relative;
-  margin: 30px;
-}
-
-.box {
+.homepage {
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.7;
-  background: #0057e3;
+  .titlebox {
+    width: 100%;
+    height: 80%;
+    position: relative;
+    .title {
+      font-size: 2.5rem;
+      top: 50%;
+      bottom: 50%;
+      height: auto;
+      text-align: center;
+      margin: auto;
+      position: relative;
+      font-family: "Pathway Extreme", sans-serif;
+      font-weight: 1000;
+      color: #121212;
+    }
+  }
+
+  .showoff {
+    background-image: url(mZqRHDecHhqHshC5didxnW-320-80.jpg);
+    /* background-color: #2c3e50; */
+    width: 100%;
+    height: 100%;
+    right: 0%;
+  }
+
+  .zoomies {
+    position: absolute;
+    display: flex;
+    left: 50%;
+    top: 80%;
+    margin-left: -3.75rem;
+    margin-top: -3.5rem;
+    width: 110px;
+    height: 110px;
+    transition: transform 1s;
+  }
+
+  .bcontainer {
+    position: absolute;
+    display: flex;
+    .animatedcircle {
+      width: 110px;
+      height: 110px;
+      margin: -0.25px -0.25px;
+      border-radius: 50%;
+      border-style: dashed;
+      animation: spin;
+      animation-duration: 10000ms;
+      animation-iteration-count: infinite;
+      animation-timing-function: linear;
+    }
+    .learnmore {
+      background: linear-gradient(
+        0deg,
+        rgba(116, 146, 168, 1) 0%,
+        rgba(184, 92, 231, 1) 100%
+      );
+      color: white;
+      border: none;
+      border-radius: 50%;
+      margin: 7.75px 7.75px;
+      width: 100px;
+      height: 100px;
+      font-size: 1.15em;
+      cursor: pointer;
+      font-family: "Pathway Extreme", sans-serif;
+    }
+  }
 }
 
-.overlay {
-  z-index: 9;
-  background: #009938;
+@keyframes spin {
+  0% {
+    transform: scale(1) rotate(0deg);
+  }
+  25% {
+    transform: scale(1.1) rotate(90deg);
+  }
+  50% {
+    transform: scale(1) rotate(180deg);
+  }
+  75% {
+    transform: scale(1.1) rotate(270deg);
+  }
+  100% {
+    transform: scale(1) rotate(360deg);
+  }
+}
+
+.zoomies:hover {
+  transform: scale(1.8);
 }
