added animation to starting the site

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -3,6 +3,7 @@
     
     <div class="titlebox">
         <div class="title">hummelweb</div>
+        <!-- Utilizing the mastery of design to produce ageless imagery that enhances your brand and motivates your viewers. -->
     </div>
 
     <div class="showoff">
