--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
 <div class="homepage">
     <div class="titlebox">
-        <div class="title">hummelweb</div>
+        <div class="title">hummelweb.net</div>
     </div>
 
     <div class="showoff">
