added animations and text

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,15 @@
 
 <div class="homepage">
     <div class="titlebox">
-        <div class="title">hummelweb.net</div>
+        <div class="textbox">
+            <div class="name">Hi, I'm Marius</div>
+            <div class="shownlater">
+                <div class="jobs">Web Designer<br/> Web Developer</div>
+                <div class="text">Elevating your ideas into your perfect site.</div>
+                <div class="seemore"><span>View my Work</span></div>
+            </div>
+            
+        </div>
     </div>
 
     <div class="showoff">
@@ -11,7 +19,7 @@
  
     <div class="zoomies">
         <div class="bcontainer">
-            <button class="learnmore">COMING SOON</button>
+            <button class="learnmore">CONTACT ME</button>
         </div>  
         <div class="bcontainer overlay">
             <div class="animatedcircle"></div>
