--- a/src/app/home/home.animations.scss
+++ b/src/app/home/home.animations.scss
@@ -20,6 +20,77 @@
   transform: scale(1.8);
 }
 
+.seemore {
+  width: 15rem;
+  font-size: 2rem;
+  position: relative;
+  padding: 0;
+  overflow: hidden;
+
+  transition: transform 0.5s; //will be inherited
+  //transition-timing-function: cubic-bezier(1.000, 0.000, 0.000, 1.000);
+  display: block;
+
+  &::after {
+    content: "View my Work";
+    display: inline-block;
+    transform: translateY(100%);
+    position: absolute;
+    left: 0;
+    transition: inherit;
+    text-decoration: underline;
+  }
+
+  > span {
+    display: inline-block;
+    text-decoration: underline;
+    transform: translateY(0%);
+    transition: inherit;
+  }
+
+  &:hover {
+    > span {
+      transform: translateY(-100%);
+    }
+    &::after {
+      transform: translateY(0%);
+    }
+  }
+}
+
+@keyframes transitionHey {
+  0% {
+    margin-left: 43%;
+    margin-top: 20%;
+    font-size: 3rem;
+  }
+  20% {
+    margin-left: 43%;
+    margin-top: 20%;
+    font-size: 3rem;
+  }
+  60% {
+    margin-top: 20%;
+    margin-left: 0;
+    font-size: 3rem;
+  }
+  100% {
+    margin-top: 0;
+    font-size: 1.5rem;
+  }
+}
+@keyframes transitionTextAfterHey {
+  0% {
+    opacity: 0;
+  }
+  95% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes transitionInShowOff {
   0% {
     width: 0%;
@@ -41,15 +112,6 @@
   }
 }
 
-@keyframes transitionInShowOffTitle {
-  0% {
-    width: 100%;
-  }
-  100% {
-    width: 60%;
-  }
-}
-
 @keyframes transitionInShowOffResponsiveTitle {
   0% {
     height: 100%;
@@ -63,7 +125,7 @@
   0% {
     opacity: 0%;
   }
-  50% {
+  85% {
     opacity: 0%;
   }
   100% {
@@ -74,13 +136,20 @@
 @media screen and (min-width: 1251px) {
   .homepage {
     .titlebox {
-      animation: transitionInShowOffTitle 3s;
+      .textbox {
+        .name {
+          animation: transitionHey 4s linear;
+        }
+        .shownlater {
+          animation: transitionTextAfterHey 4s;
+        }
+      }
     }
     .showoff {
       animation: transitionInShowOff 3s;
     }
     .bcontainer {
-      animation: transitionCircle 3s;
+      animation: transitionCircle 6s;
       .animatedcircle {
         animation: spin;
         animation-delay: 1.5s;
