--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,14 @@
             <div class="animatedcircle"></div>
         </div> 
     </div>
-    
-     
-    
 </div>
+<div class="selected">
+    <div class="selected-title" *ngFor="let n of numSequence(28)">
+        <h3 class="selected-text">Selected Work</h3>
+        <div class="dot"></div>
+    </div>
+</div>
+
+<div class="selected-show"></div>
+
+
