--- a/src/app/home/home.responsive.scss
+++ b/src/app/home/home.responsive.scss
@@ -53,4 +53,22 @@
       }
     }
   }
+  .selected-title {
+    width: 3700%;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .selected {
+    .selected-title {
+      margin-top: 10rem;
+      width: 4000%;
+    }
+  }
+  .selected-show {
+    margin-top: 4rem;
+    width: 100%;
+    height: 85%;
+    background-color: #2c3e50;
+  }
 }
