--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             <div class="shownlater">
                 <div class="jobs">Web Designer<br/> Web Developer</div>
                 <div class="text">Elevating your ideas into your perfect site.</div>
-                <div class="seemore"><span>View my Work</span></div>
+                <div class="seemore"><a href="#selected">View my Work</a></div>
             </div>
             
         </div>
@@ -26,7 +26,7 @@
         </div> 
     </div>
 </div>
-<div class="selected">
+<div id="selected">
     <div class="selected-title" *ngFor="let n of numSequence(28)">
         <h3 class="selected-text">Selected Work</h3>
         <div class="dot"></div>
