--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,45 +1,167 @@
-.selected-title {
-  margin-top: 3%;
-  width: 1000%;
+.container {
+  display: flex;
+  width: 40%;
+  height: 100%;
+  float: right;
+  overflow: hidden;
+  .scroll-parent {
+    position: relative;
+    overflow: hidden;
+    width: 40%;
+    height: 100%;
+    overflow-y: hidden;
 
-  .selected-text {
     float: left;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    font-size: 3rem;
-  }
-  .dot {
-    margin-top: 0.75rem;
-    float: left;
-    background-color: black;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
+    .scroll-element {
+      position: relative;
+      .pic-l1 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/webdesign.jpg);
+        background-position: -100px -80px;
+        background-size: 180%;
+      }
+      .pic-l2 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/artz.jpg);
+        background-position: -25px -0px;
+        background-size: 120%;
+      }
+      .pic-l3 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/head.jpg);
+        background-position: -230px -00px;
+        background-size: 250%;
+      }
+      .pic-m1 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/headd.jpg);
+        background-position: -240px -25px;
+        background-size: 250%;
+      }
+      .pic-m2 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/coolglasses.jpg);
+        background-position: -120px 0px;
+        background-size: 225%;
+      }
+      .pic-m3 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/chair.jpg);
+        background-position: -270px -50px;
+        background-size: 300%;
+      }
+      .pic-r1 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/galaxy.png);
+        background-position: -230px 0px;
+        background-size: 300%;
+      }
+      .pic-r2 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/skull.jpg);
+        background-position: -300px -50px;
+        background-size: 300%;
+      }
+      .pic-r3 {
+        margin-bottom: 0.5%;
+        border-top: solid;
+        border-bottom: solid;
+        border-color: white;
+        width: 100%;
+        height: 33cqb;
+        background-image: url(./../../assets/images/bvabo.jpg);
+        background-position: -60px 0px;
+        background-size: 150%;
+      }
+    }
   }
 }
 
-//animation
-.selected-title {
-  animation: movement 20s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
+.primary {
+  animation: scroll 20s linear infinite;
+}
+.secondary {
+  animation: scroll 20s linear infinite;
 }
 
-@keyframes movement {
-  0% {
-    transform: translateX(0%);
+.primarytwo {
+  animation: scrollback 25s linear infinite;
+}
+.secondarytwo {
+  animation: scrollback 25s linear infinite;
+}
+
+.primarythree {
+  animation: scroll 15s linear infinite;
+}
+.secondarythree {
+  animation: scroll 15s linear infinite;
+}
+
+.left {
+  margin-right: 0.5rem;
+}
+.mid {
+  margin-right: 0.5rem;
+}
+.right {
+  margin-right: 0.5rem;
+}
+
+@keyframes scroll {
+  from {
+    top: 0%;
   }
-  50% {
-    transform: translateX(-8%);
-  }
-  100% {
-    transform: translateX(0%);
+  to {
+    top: -100%;
   }
 }
 
-// responsive
-@media screen and (max-width: 1250px) {
-  .selected-title {
-    width: 3700%;
+@keyframes scrollback {
+  from {
+    top: -100%;
+  }
+  to {
+    top: 0%;
   }
 }
