--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,41 +1,38 @@
-<div class="container">
+<div class="showoff">
     <div class="scroll-parent left">
-      <div class="scroll-element primary">
-        <div class ="pic-l1"></div>
-        <div class ="pic-l2"></div>
-        <div class ="pic-l3"></div>
-      </div>
-      <div class="scroll-element secondary">
-        <div class="pic">
-            <div class ="pic-l1"></div>
-            <div class ="pic-l2"></div>
-            <div class ="pic-l3"></div>
+        <div class="scroll-element primary">
+            <div class ="pic pic-l1"></div>
+            <div class ="pic pic-l2"></div>
+            <div class ="pic pic-l3"></div>
         </div>
-        
-      </div>
+        <div class="scroll-element secondary">
+            <div class ="pic pic-l1"></div>
+            <div class ="pic pic-l2"></div>
+            <div class ="pic pic-l3"></div>
+        </div>
     </div>
     <div class="scroll-parent mid">
         <div class="scroll-element primarytwo">
-          <div class ="pic-m1"></div>
-          <div class ="pic-m2"></div>
-          <div class ="pic-m3"></div>
+            <div class ="pic pic-m1"></div>
+            <div class ="pic pic-m2"></div>
+            <div class ="pic pic-m3"></div>
         </div>
         <div class="scroll-element secondarytwo">
-          <div class ="pic-m1"></div>
-          <div class ="pic-m2"></div>
-          <div class ="pic-m3"></div>
+            <div class ="pic pic-m1"></div>
+            <div class ="pic pic-m2"></div>
+            <div class ="pic pic-m3"></div>
         </div>
-      </div>
-      <div class="scroll-parent right">
+        </div>
+        <div class="scroll-parent right">
         <div class="scroll-element primarythree">
-          <div class ="pic-r1"></div>
-          <div class ="pic-r2"></div>
-          <div class ="pic-r3"></div>
+            <div class ="pic pic-r1"></div>
+            <div class ="pic pic-r2"></div>
+            <div class ="pic pic-r3"></div>
         </div>
         <div class="scroll-element secondarythree">
-          <div class ="pic-r1"></div>
-          <div class ="pic-r2"></div>
-          <div class ="pic-r3"></div>
+            <div class ="pic pic-r1"></div>
+            <div class ="pic pic-r2"></div>
+            <div class ="pic pic-r3"></div>
         </div>
-      </div>
-  </div>
+    </div>
+</div>
