--- a/src/app/home/home.animations.scss
+++ b/src/app/home/home.animations.scss
@@ -98,6 +98,54 @@
   }
 }
 
+@keyframes scroll {
+  from {
+    top: 0%;
+  }
+  to {
+    top: -100%;
+  }
+}
+
+@keyframes scrollback {
+  from {
+    top: -100%;
+  }
+  to {
+    top: 0%;
+  }
+}
+
+.primary {
+  animation: scroll 20s linear infinite;
+}
+.secondary {
+  animation: scroll 20s linear infinite;
+}
+
+.primarytwo {
+  animation: scrollback 25s linear infinite;
+}
+.secondarytwo {
+  animation: scrollback 25s linear infinite;
+}
+
+.primarythree {
+  animation: scroll 15s linear infinite;
+}
+.secondarythree {
+  animation: scroll 15s linear infinite;
+}
+
+.left {
+  margin-right: 0.5rem;
+}
+.mid {
+  margin-right: 0.5rem;
+}
+.right {
+  margin-right: 0.5rem;
+}
 @media screen and (min-width: 1251px) {
   .homepage {
     .titlebox {
