--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,4 +1,4 @@
-.container {
+.showoff {
   display: flex;
   width: 40%;
   height: 100%;
@@ -14,101 +14,56 @@
     float: left;
     .scroll-element {
       position: relative;
-      .pic-l1 {
+      .pic {
         margin-bottom: 0.5%;
         border-top: solid;
         border-bottom: solid;
         border-color: white;
         width: 100%;
         height: 33cqb;
+      }
+      .pic-l1 {
         background-image: url(./../../assets/images/webdesign.jpg);
         background-position: -100px -80px;
         background-size: 180%;
       }
       .pic-l2 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/artz.jpg);
         background-position: -25px -0px;
         background-size: 120%;
       }
       .pic-l3 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/head.jpg);
         background-position: -230px -00px;
         background-size: 250%;
       }
+
       .pic-m1 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/headd.jpg);
         background-position: -240px -25px;
         background-size: 250%;
       }
       .pic-m2 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/coolglasses.jpg);
         background-position: -120px 0px;
         background-size: 225%;
       }
       .pic-m3 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/chair.jpg);
         background-position: -270px -50px;
         background-size: 300%;
       }
       .pic-r1 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/galaxy.png);
         background-position: -230px 0px;
         background-size: 300%;
       }
       .pic-r2 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/skull.jpg);
         background-position: -300px -50px;
         background-size: 300%;
       }
       .pic-r3 {
-        margin-bottom: 0.5%;
-        border-top: solid;
-        border-bottom: solid;
-        border-color: white;
-        width: 100%;
-        height: 33cqb;
         background-image: url(./../../assets/images/bvabo.jpg);
         background-position: -60px 0px;
         background-size: 150%;
