--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,7 +47,6 @@
       width: 40%;
       height: 100%;
       overflow-y: hidden;
-
       float: left;
       .scroll-element {
         position: relative;
@@ -76,9 +75,9 @@
         }
 
         .pic-m1 {
-          background-image: url(./../../assets/images/headd.jpg);
-          background-position: -240px -25px;
-          background-size: 250%;
+          background-image: url(./../../assets/images/otter.png);
+          background-position: -80px 0px;
+          background-size: 130%;
         }
         .pic-m2 {
           background-image: url(./../../assets/images/coolglasses.jpg);
@@ -91,14 +90,14 @@
           background-size: 300%;
         }
         .pic-r1 {
-          background-image: url(./../../assets/images/galaxy.png);
-          background-position: -230px 0px;
-          background-size: 300%;
+          background-image: url(./../../assets/images/headd.jpg);
+          background-position: -240px -25px;
+          background-size: 250%;
         }
         .pic-r2 {
-          background-image: url(./../../assets/images/skull.jpg);
-          background-position: -300px -50px;
-          background-size: 300%;
+          background-image: url(./../../assets/images/toyko.png);
+          background-position: -50px -50px;
+          background-size: 130%;
         }
         .pic-r3 {
           background-image: url(./../../assets/images/bvabo.jpg);
