--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,7 +54,7 @@
  
     <div class="zoomies">
         <div class="bcontainer">
-            <button class="learnmore">CONTACT ME</button>
+            <button class="learnmore" (click)="onContact()">CONTACT ME</button>
         </div>
     </div>
 </div>
