--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,38 +1,16 @@
-<div class="showoff">
-    <div class="scroll-parent left">
-        <div class="scroll-element primary">
-            <div class ="pic pic-l1"></div>
-            <div class ="pic pic-l2"></div>
-            <div class ="pic pic-l3"></div>
-        </div>
-        <div class="scroll-element secondary">
-            <div class ="pic pic-l1"></div>
-            <div class ="pic pic-l2"></div>
-            <div class ="pic pic-l3"></div>
+<div class="homepages">
+    <div class="titleboxs">
+        <div class="textboxs">
+            <div class="jobss">Let's work <br/>together!</div>
+            <div class="shownlaters">
+                <div class="names">Hi, I'm Marius</div>
+                <div class="texts">Elevating your ideas into your perfect site.</div>
+                <div class="seemores"><a href="#selected">View my Work</a></div>
+            </div>
+            
         </div>
     </div>
-    <div class="scroll-parent mid">
-        <div class="scroll-element primarytwo">
-            <div class ="pic pic-m1"></div>
-            <div class ="pic pic-m2"></div>
-            <div class ="pic pic-m3"></div>
-        </div>
-        <div class="scroll-element secondarytwo">
-            <div class ="pic pic-m1"></div>
-            <div class ="pic pic-m2"></div>
-            <div class ="pic pic-m3"></div>
-        </div>
-        </div>
-        <div class="scroll-parent right">
-        <div class="scroll-element primarythree">
-            <div class ="pic pic-r1"></div>
-            <div class ="pic pic-r2"></div>
-            <div class ="pic pic-r3"></div>
-        </div>
-        <div class="scroll-element secondarythree">
-            <div class ="pic pic-r1"></div>
-            <div class ="pic pic-r2"></div>
-            <div class ="pic pic-r3"></div>
-        </div>
+    <div class="showoffs">
+
     </div>
 </div>
