--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -56,52 +56,61 @@
           border-bottom: solid;
           border-color: white;
           width: 100%;
-          height: 33cqb;
+          height: 32.7cqb;
         }
         .pic-l1 {
           background-image: url(./../../assets/images/webdesign.jpg);
-          background-position: -100px -80px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 180%;
         }
         .pic-l2 {
           background-image: url(./../../assets/images/artz.jpg);
-          background-position: -25px -0px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 120%;
         }
         .pic-l3 {
           background-image: url(./../../assets/images/head.jpg);
-          background-position: -230px -00px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 250%;
         }
 
         .pic-m1 {
           background-image: url(./../../assets/images/otter.png);
-          background-position: -80px 0px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 130%;
         }
         .pic-m2 {
           background-image: url(./../../assets/images/coolglasses.jpg);
-          background-position: -120px 0px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 225%;
         }
         .pic-m3 {
           background-image: url(./../../assets/images/chair.jpg);
-          background-position: -270px -50px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 300%;
         }
         .pic-r1 {
           background-image: url(./../../assets/images/headd.jpg);
-          background-position: -240px -25px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 250%;
         }
         .pic-r2 {
           background-image: url(./../../assets/images/toyko.png);
-          background-position: -50px -50px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 130%;
         }
         .pic-r3 {
           background-image: url(./../../assets/images/bvabo.jpg);
-          background-position: -60px 0px;
+          background-repeat: no-repeat;
+          background-position: center center;
           background-size: 150%;
         }
       }
