--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,16 +1,27 @@
 <div class="homepages">
-    <div class="titleboxs">
-        <div class="textboxs">
-            <div class="jobss">Let's work <br/>together!</div>
-            <div class="shownlaters">
-                <div class="names">Hi, I'm Marius</div>
-                <div class="texts">Elevating your ideas into your perfect site.</div>
-                <div class="seemores"><a href="#selected">View my Work</a></div>
-            </div>
-            
+    <div class="titlebox">
+        <div class="textbox">
+            <div class="jobs">Let's work together!</div>
+            <form>
+                <div class="form-group field">
+                    <input type="text" class="form-field" placeholder="Your name...*" name="name" id='name' required />
+                </div>
+                <div class="form-group field">
+                    <input type="email" class="form-field" placeholder="Email*" name="email" id='email' required />
+                </div>
+                <div class="form-group field">
+                    <input type="text" class="form-field" placeholder="Company" name="company" id='company' />
+                </div>
+                <div class="form-group field">
+                    <input type="text" class="form-field" placeholder="Message*" name="message" id='message' required />
+                </div>
+                <button class="btn draw-border" type="submit">Send message</button>
+            </form>
         </div>
     </div>
     <div class="showoffs">
 
     </div>
 </div>
+
+
