--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,34 @@
 
 <div class="homepage">
     <div class="titlebox">
-        <div class="textbox">
+        <div class="textbox" *ngIf="!isOnContact()">
             <div class="name">Hi, I'm Marius</div>
             <div class="shownlater">
                 <div class="jobs">Web Designer<br/> Web Developer</div>
                 <div class="text">Elevating your ideas into your perfect site.</div>
                 <div class="seemore"><a href="#selected">View my Work</a></div>
             </div>
-            
+        </div>
+        <div class="textbox contact" *ngIf="isOnContact()">
+            <div class="jobs">Let's work together!</div>
+            <form>
+                <div class="form-group field">
+                    <input type="text" class="form-field" placeholder="Your name...*" name="name" id='name' required />
+                </div>
+                <div class="form-group field">
+                    <input type="email" class="form-field" placeholder="Email*" name="email" id='email' required />
+                </div>
+                <div class="form-group field">
+                    <input type="text" class="form-field" placeholder="Company" name="company" id='company' />
+                </div>
+                <div class="form-group field">
+                    <input type="text" class="form-field" placeholder="Message*" name="message" id='message' required />
+                </div>
+                <div class="buttoncontainer">
+                    <button class="btn draw-border" type="submit">Send message</button>
+                    <button class="btn" (click)="onContact()"><- Back to Home</button>
+                </div>
+            </form>
         </div>
     </div>
 
@@ -54,7 +74,7 @@
  
     <div class="zoomies">
         <div class="bcontainer">
-            <button class="learnmore" (click)="onContact()">CONTACT ME</button>
+            <button class="learnmore" *ngIf="!isOnContact()" (click)="onContact()">CONTACT ME</button>
         </div>
     </div>
 </div>
