--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -1,14 +1,15 @@
 .homepages {
   width: 100%;
   height: 100%;
-  .titleboxs {
+  .titlebox {
     width: 60%;
     height: 100%;
     background-color: white;
     position: relative;
     float: left;
-    .textboxs {
-      margin-top: -10rem;
+
+    .textbox {
+      margin-top: -13rem;
       top: 50%;
       bottom: 50%;
       left: 15%;
@@ -18,19 +19,62 @@
       height: auto;
       position: relative;
       color: #121212;
-      .jobss {
+      .jobs {
         font-size: 3.5rem;
+        margin-bottom: 5vh;
       }
-      .names {
-        font-size: 1.5rem;
+
+      .form-field {
+        width: 60%;
+        border: 0;
+        border-bottom: 2px solid black;
+        outline: 0;
+        font-size: 1.3rem;
+        color: black;
+        padding: 7px 0;
+        background: transparent;
+        transition: border-color 0.2s;
+        font-family: "Pathway Extreme", sans-serif;
       }
-      .texts {
-        font-size: 1.5rem;
+      .form-field:focus {
+        padding-bottom: 6px;
+        border-width: 3px;
+        border-image: linear-gradient(to right, black, grey);
+        border-image-slice: 1;
       }
-      .seemores {
-        a {
-          color: black;
+      .form-field:focus::placeholder {
+        color: black;
+        font-weight: 600;
+      }
+      .form-field:hover::placeholder {
+        color: black;
+        font-weight: 600;
+      }
+      .form-field {
+        &:required,
+        &:invalid {
+          box-shadow: none;
         }
+      }
+
+      .btn {
+        margin-top: 5vh;
+        color: black;
+        border: 1px solid white;
+        padding: 15px 25px;
+        letter-spacing: 4px;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        background-color: white;
+        border: 1px solid black;
+        font-weight: bold;
+        font-family: "Pathway Extreme", sans-serif;
+      }
+
+      .btn:hover {
+        background-color: rgb(59, 59, 59);
+        color: white;
       }
     }
   }
